Version 0.7:

	* Support any number of names (currently only in cmd line).
	  Superceedes individual support
	* Add leaderboard binary for creating leaderboard/results pages

Version 0.6:

	* Add handicap support
	* Add ECATS upload support

Version 0.5.2:

	* Fix translation keys
	* add ecl2salliere script

Version 0.5.1:

	* Move installation directories around, 
	  only install into $PREFIX/share/salliere/

Version 0.5:

	* Support XIMP as well as Matchpointing
	* Support for individuals (currently only in cmd line)
	* Support for imping against par
	* Correct masterpoint awards
	* Open all file choosers in dir of last file operation
	* Fix display of redoubled contracts

Version 0.4:

	* Support averages
	* Support assigned/ajusted/split scores
	* forcing score supported in GSalliere

Version 0.3:

	* Support b33r card
	* board ordering knows about sections and vulnerabilities
	* --setsize parameter to check sets of n boards per round for matching 
	  pair numbers
	* output hands within boards sorted by NS pair number (Suggested by
	  Carrie Oliver <cho21 -at- cam -dot- ac -dot- uk>)
	* gsalliere graphical frontend
	* get version from jar
	* add itext to INSTALL info
	* don't write files when they weren't modified
	* check that only NSEW can be declarer
	* don't add class-path on debug when it's disabled
	* output a space not a 0 in the matrix when a pair didn't play that board
	  (Suggested by Ralph Owen <rho21 -at- cam -dot- ac -dot- uk)
	* better average support

Version 0.2:

	* Only divide by the number of boards played for percentages, not all of 
	  them (Spotted by Elizabeth Roberts <ehr24 -at- cam -dot- ac -dot- uk>)
	* Output to file and output in HTML and PDF formats.
	* Calculate LP/OPs
	* Support section numbering for boards
	* Support vulnerability overriding
	* Support passouts
	* Pass through averages without scoring
	* Assorted bug fixes

Version 0.1:

	* Initial release of salliere